Some form functionality added. Uploading the photos does not yet work as expected.

--- a/app/src/main/res/layout/delete_card_view.xml
+++ b/app/src/main/res/layout/delete_card_view.xml
@@ -31,8 +31,8 @@
 
             <ImageView
                 android:id="@+id/delete_image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:scaleType="fitCenter"
                 android:layout_weight="3"
                 app:srcCompat="@android:drawable/ic_menu_report_image" />
@@ -41,6 +41,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:paddingTop="5dp"
+                android:paddingStart="15dp"
                 android:layout_weight="1">
                 <TextView
                     android:layout_width="wrap_content"
