--- a/app/src/main/res/layout/fragment_form_overview.xml
+++ b/app/src/main/res/layout/fragment_form_overview.xml
@@ -5,8 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBlue"
     android:padding="25dp"
+    android:isScrollContainer="true"
     android:layout_marginBottom="50dp"
     android:id="@+id/form_overview">
+
+
 
 
     <TextView
@@ -46,16 +49,5 @@
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fab_forms"
-        android:layout_gravity="end|bottom"
-        android:backgroundTint="@color/colorGrey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:tint="@android:color/black"
-        android:layout_marginHorizontal="8dp"
-        android:src="@drawable/ic_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
