--- a/app/src/main/res/layout/fragment_upload_form.xml
+++ b/app/src/main/res/layout/fragment_upload_form.xml
@@ -131,7 +131,7 @@
             <TableRow android:layout_marginTop="10dp">
 
                 <ImageView
-                    android:id="@+id/photo1"
+                    android:id="@+id/check_out_photo"
                     android:layout_width="150dp"
                     android:layout_height="250dp"
                     android:contentDescription="photo_from_check_out"
@@ -139,7 +139,7 @@
                     app:srcCompat="@drawable/ic_gear" />
 
                 <ImageView
-                    android:id="@+id/photo2"
+                    android:id="@+id/check_in_photo"
                     android:layout_width="150dp"
                     android:layout_height="250dp"
                     android:contentDescription="photo_from_check_in"
