Only show clubs that the user is a member of in the switch clubs dialog

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -81,9 +81,8 @@
             app:argType="boolean"
             android:defaultValue="false"/>
         <argument
-            android:name="clubID"
-            app:argType="string"
-            android:defaultValue=""/>
+            android:name="club"
+            app:argType="edu.rosehulman.gearlocker.models.Club"/>
     </activity>
 
     <dialog
