Forms detail and removed searchview.

--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -155,6 +155,9 @@
         <action
             android:id="@+id/action_formsOverviewFragment_to_formUploadFragment"
             app:destination="@id/formUploadFragment" />
+        <action
+            android:id="@+id/action_formsOverviewFragment_to_formDetail"
+            app:destination="@id/formDetail" />
     </fragment>
     <dialog
         android:id="@+id/popUpInventory"
@@ -238,6 +241,14 @@
             app:argType="edu.rosehulman.gearlocker.rentalsoverview.RentalRequestViewHolder$RentalHandler"
             app:nullable="true"
             android:defaultValue="@null" />
+    </fragment>
+    <fragment
+        android:id="@+id/formDetail"
+        android:name="edu.rosehulman.gearlocker.rentals.FormDetail"
+        android:label="FormDetail" >
+        <argument
+            android:name="form"
+            app:argType="edu.rosehulman.gearlocker.models.Form" />
     </fragment>
 
 </navigation>
