--- a/app/src/main/res/layout/add_club_home.xml
+++ b/app/src/main/res/layout/add_club_home.xml
@@ -7,26 +7,13 @@
     android:background="@color/colorBlue"
     tools:context=".MainActivity">
 
-    <SearchView
-        android:id="@+id/search_view"
-        style="@android:style/Widget.Material.SearchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorGrey"
-        android:focusedByDefault="false"
-        android:iconifiedByDefault="false"
-        android:queryBackground="@color/colorGrey"
-        android:queryHint="Club Name"
-        android:theme="@style/AppTheme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="3dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/search_view"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="10dp"
         android:divider="@color/colorBlue"
         android:dividerHeight="2dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
