Filter club specific items to the clubs that own them

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -81,8 +81,9 @@
             app:argType="boolean"
             android:defaultValue="false"/>
         <argument
-            android:name="club"
-            app:argType="edu.rosehulman.gearlocker.models.Club"/>
+            android:name="clubID"
+            app:argType="string"
+            android:defaultValue=""/>
     </activity>
 
     <dialog
