Still working on the search view. Not working yet, unfortunately.

--- a/app/src/main/res/layout/club_cardview.xml
+++ b/app/src/main/res/layout/club_cardview.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorGrey"
+        android:id="@+id/linear_layout"
         android:orientation="horizontal"
         android:weightSum="8">
 
