--- a/app/src/main/res/layout/gear_summary_popup.xml
+++ b/app/src/main/res/layout/gear_summary_popup.xml
@@ -52,7 +52,7 @@
         android:id="@+id/item_photo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toEndOf="@id/description_text_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/cost_text_view"
@@ -86,10 +86,11 @@
         android:id="@+id/current_condition_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/common_google_signin_btn_text_light_default"
         app:layout_constraintStart_toEndOf="@+id/condition_text_view"
         app:layout_constraintBottom_toBottomOf="@+id/condition_text_view"
         android:layout_marginStart="10dp"
-        android:background="@color/colorGreen"
+        android:textColor="@color/white"
         android:paddingHorizontal="5dp"
         android:text="@string/condition_new"
         android:textSize="18sp" />
